2009-06-22 Nan Dun <dunnan@yl.is.s.u-tokyo.ac.jp>
	* process tree graph (graphviz and cytoscape)
	* workflow graph (cytoscape)
	* v0.2 release

2009-05-09 Nan Dun <dunnan@yl.is.s.u-tokyo.ac.jp>
	* add show/hide all series/values control to charts
	* add poll rate multiplier
	* statistics for total system call elapsed time
	* invoke ftrac by mount/umount command
	* report to pretty html by amCharts
	* add system call statistics
	* bug fixes

2009-05-06 Nan Dun <dunnan@yl.is.s.u-tokyo.ac.jp>
	* Paramark v0.1 release
	* fusetrac.py with basic file system calls tracking by FUSE
	* monitoring by curses interface
	* Paramark v0.1 release
	* fusetrac.py with basic file system calls tracking by FUSE
	* monitoring by curses interface